--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <header class="header">
     <a href="#" class="logo">Event<span>Craft</span></a>
     <nav class="nav-links">
-      <a href="#">Services</a>
-      <a href="#">About</a>
+      <a href="#" routerLink="/services">Services</a>
+      <a href="#" routerLink="/about">About</a>
       <a href="#">Contact</a>
     </nav>
   </header>
