--- a/src/app/pages/services/services.component.css
+++ b/src/app/pages/services/services.component.css
@@ -29,7 +29,7 @@
   }
 
   .service-card {
-    background: white;
+    background: rgba(222, 222, 222, 0.071);
     border-radius: 15px;
     padding: 2rem;
     text-align: center;
@@ -63,9 +63,10 @@
   }
 
   .service-card h3 {
-    color: var(--secondary);
+    color: #2d2979;
     margin-bottom: 1rem;
     font-size: 1.5rem;
+    font-weight: bold;
   }
 
   .service-card p {
@@ -77,16 +78,17 @@
   .service-btn {
     display: inline-block;
     padding: 0.8rem 1.5rem;
-    background: var(--primary);
+    background:  #6C63FF;
     color: white;
     text-decoration: none;
     border-radius: 25px;
     transition: all 0.3s ease;
     cursor: pointer;
+    border: none;
   }
 
   .service-btn:hover {
-    background: var(--secondary);
+    background: #2d2979;
     transform: translateY(-2px);
   }
 
