--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,8 +1,13 @@
 <header class="header">
     <a href="#" class="logo">Event<span>Craft</span></a>
     <nav class="nav-links">
-      <a href="#">Services</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="">Services</a>
+      <a [routerLink]="'/aboutus'">About</a>
+      <a [routerLink]="'/contact'">Contact</a>
+      <a [routerLink]="'/dashboard'">Dashboard</a>
+      <a [routerLink]="'/band'">Band</a>
+      <a [routerLink]="'/hall'">Hall</a>
+      <a [routerLink]="'/catering'">Catering</a>
+
     </nav>
   </header>
