--- a/src/app/pages/band/band.component.html
+++ b/src/app/pages/band/band.component.html
@@ -1,1 +1,20 @@
-<p>band works!</p>
+<app-navbar></app-navbar>
+<header>
+    <div class="container">
+        <h1 style="color: var(--dark-purple); margin-top:100px;">Available Bands</h1>
+        <p style="color: var(--dark-blue);">Find the perfect band for your event</p>
+    </div>
+</header>
+
+<div class="container">
+    <!-- Single Band Card Template -->
+    <div class="band-card fade-in">
+        <h3>The Melodics</h3>
+        <p class="price-tag">$1500</p>
+        <div class="genre-tags">
+            <span class="genre-tag">2025-09-09</span>
+        </div>
+        
+        <button class="book-button">Book</button>
+    </div>
+</div>
