--- a/src/app/pages/catering/catering.component.html
+++ b/src/app/pages/catering/catering.component.html
@@ -1,1 +1,21 @@
-<p>catering works!</p>
+<app-navbar></app-navbar>
+<header>
+    <div class="container">
+        <h1 style="color: var(--dark-purple); margin-top:80px;">Catering Services</h1>
+        <p style="color: var(--dark-blue);">Choose from our premium catering packages for your event</p>
+    </div>
+</header>
+
+<div class="container">
+    <div class="catering-card fade-in">
+        <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="var(--dark-purple)" stroke-width="2">
+            <path d="M3 6h18M3 12h18M3 18h18"/>
+        </svg>
+        <h3>Indian Cuisine</h3>
+        <p class="price-tag1">$45</p>
+        <div class="cuisine-tags">
+            <span class="cuisine-tag">2026-09-12</span>
+        </div>
+        <button class="book-button">Book</button>
+    </div>
+</div>
