--- a/src/app/pages/hall/hall.component.html
+++ b/src/app/pages/hall/hall.component.html
@@ -1,1 +1,19 @@
-<p>hall works!</p>
+<app-navbar></app-navbar>
+<header>
+    <div class="container">
+        <h1 class="heading" id="classID">Available Event Halls</h1>
+        <p class="subheading">Find the perfect venue for your special occasion</p>
+    </div>
+</header>
+
+<div class="container">
+    <!-- Single Hall Card Template -->
+    <div class="hall-card fade-in">
+        <h3>Crystal Ballroom</h3>
+        <p class="price-tag">$2500</p>
+        <div class="feature-tags">
+        <span class="feature-tag">2025-09-09</span>
+        </div>
+        <button class="book-button">Book</button>
+    </div>
+</div>
